--- a/RPA.MIT.ReferenceData.SeedProvider/RPA.MIT.ReferenceData.SeedProvider.csproj
+++ b/RPA.MIT.ReferenceData.SeedProvider/RPA.MIT.ReferenceData.SeedProvider.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <PropertyGroup>
+    <Version>1.0.1</Version>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
