--- a/RPA.MIT.ReferenceData.SeedProvider/appsettings.json
+++ b/RPA.MIT.ReferenceData.SeedProvider/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "DbConnectionTemplate": "Server={0};Port={1};Database={2};User Id={3};Password={4};"
+    "DbConnectionTemplate": "Server=sndffcdbssq1002.postgres.database.azure.com;Port=5432;Database=rpa_mit_reference_data;User Id=adminuser@sndffcdbssq1002;Password=9kD4PsGhqDNJy2br8c14NQfVi4xED5mD;"
 }
