--- a/RPA.MIT.ReferenceData.SeedProvider/RPA.MIT.ReferenceData.SeedProvider.csproj
+++ b/RPA.MIT.ReferenceData.SeedProvider/RPA.MIT.ReferenceData.SeedProvider.csproj
@@ -12,6 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="RPA.MIT.ReferenceData" Version="1.0.5" />
   </ItemGroup>
 
   <PropertyGroup>
